--- a/package.json
+++ b/package.json
@@ -3,18 +3,20 @@
   "scripts": {
     "build": "babel src/ -d build/",
     "hello": "npm run build && node build/helloWorld/hello.world.js",
-    "prepublish": "npm run build"
+    "image": "npm run build && ./node_modules/.bin/webpack && ./node_modules/.bin/http-server"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-loader": "^6.2.2",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
-    "flow-bin": "^0.44.0"
+    "flow-bin": "^0.44.0",
+    "webpack": "^2.4.1"
   },
   "dependencies": {
-    "clear": "0.0.1",
-    "sleep": "^5.1.1"
+    "http-server": "^0.9.0",
+    "path": "^0.12.7"
   }
 }
