--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,6 @@
         "alwaysStrict": true,
         "module": "commonjs",
         "target": "es5",
-        "allowJs": true
-    },
-    "include": [
-        "./src/"
-    ]
+        "pretty": true
+    }
 }
